libs/wingc/src/jsify/snapshots/reference_preflight_field_from_inflight_expr.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Can't access preflight member "x" on inflight instance of type "A" 9:14
Reference to lifted preflight object of type "A" of unknown origin, can't qualify the lift (see https://github.com/winglang/wing/issues/76 for details) 9:12
